@@ -2,6 +2,9 @@
        modified working copy to another (earlier) revision. (Stefan)
 - CHG: The log dialog has now a checkbox for stop-on-copy
        instead of a messagebox question. (Stefan)
+- CHG: Removed the _tsvnexcluderecursive and _tsvnexcludethis
+       filehandling. Use the paths in the settings dialog
+       instead. (Stefan)
 - BUG: After a merge dry-run, the wc URL wasn't shown
        correctly. This bug didn't affect the actual
        merge, only the UI. (Stefan)
